# docs/swagger.yaml
@@ -12,6 +12,11 @@ definitions:
     - email
     - password
     type: object
+  models.RefreshToken:
+    properties:
+      token:
+        type: string
+    type: object
   models.RegisterUser:
     properties:
       email:
@@ -28,8 +33,12 @@ definitions:
     type: object
   models.Token:
     properties:
+      refresh_token:
+        type: string
       token:
         type: string
+      user:
+        $ref: '#/definitions/models.User'
     type: object
   models.User:
     properties:
@@ -206,6 +215,28 @@ paths:
           schema:
             $ref: '#/definitions/models.Token'
       summary: Login user
+      tags:
+      - users
+  /users/refresh:
+    post:
+      consumes:
+      - application/json
+      description: Refresh token
+      parameters:
+      - description: Refresh token
+        in: body
+        name: token
+        required: true
+        schema:
+          $ref: '#/definitions/models.RefreshToken'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: Refresh token
       tags:
       - users
   /users/register:
